Modify MenuIcon Location

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
                     <li>
                         <a href="#">
                             <div></div>
-                            <span class="blind">더보기</span>
+                            <span class="blind"></span>
                         </a>
                     </li>
-                    <li id="ad">
+                    <li id="ad" class="blind">
                         <a href="#">
                             <div></div>
                             <span class="blind" style="background-image: url(&quot;https://ssl.pstatic.net/melona/libs/1555/1555503/4c5a5b3169445c30b116_20260109112927391_1.jpg&quot;);"></span>
