Add Login Form & News Menu

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <button class="blind"></button>
                 </form>
             </div>
-            <div id="nav">
+            <nav id="nav">
                 <ul>
                     <li>
                         <a href="#">
@@ -131,8 +131,98 @@
                         </a>
                     </li>
                 </ul>
-            </div>
-            <div id="main"></div>
+            </nav>
+            <main id="main">
+                <div id="main-left">
+                    <aside id="main-left-ad"></aside>
+                    <section id="main-left-newsstand">
+                        <div id="main-left-news-menu">
+                            <a href="#">뉴스스탠드</a>
+                            <a href="#">언론사편집</a>
+                            <li><a href="#">엔터</a></li>
+                            <li><a href="#">스포츠</a></li>
+                            <li><a href="#">경제</a></li>
+                            <li><a href="#">쇼핑투데이</a></li>
+                        </div>
+                        <div id="main-left-breaking-news">
+                            <a href="#">전체언론사</a>
+                            <i></i>
+                        </div>
+                        <a href="#" class="blind" id="main-left-news-home">뉴스홈</a>
+                        <div id="main-left-press">
+                            <div>
+                                <a href="#"><img src="newsstand/노컷뉴스.png" /></a>
+                                <a href="#"><img src="newsstand/뉴시스.png" /></a>
+                                <a href="#"><img src="newsstand/독서신문.png" /></a>
+                                <a href="#"><img src="newsstand/동아사이언스.png" /></a>
+                                <a href="#"><img src="newsstand/매일경제.png" /></a>
+                                <a href="#"><img src="newsstand/머니투데이.png" /></a>
+                            </div>
+                            <div>
+                                <a href="#"><img src="newsstand/서울신문.png" /></a>
+                                <a href="#"><img src="newsstand/세계일보.png" /></a>
+                                <a href="#"><img src="newsstand/스포츠조선.png" /></a>
+                                <a href="#"><img src="newsstand/스포티비.png" /></a>
+                                <a href="#"><img src="newsstand/씨네21.png" /></a>
+                                <a href="#"><img src="newsstand/아시아경제.png" /></a>
+                            </div>
+                            <div>
+                                <a href="#"><img src="newsstand/연예뉴스.png" /></a>
+                                <a href="#"><img src="newsstand/연합뉴스.png" /></a>
+                                <a href="#"><img src="newsstand/일간스포츠.png" /></a>
+                                <a href="#"><img src="newsstand/중앙.png" /></a>
+                                <a href="#"><img src="newsstand/초이스경제.png" /></a>
+                                <a href="#"><img src="newsstand/한겨레.png" /></a>
+                            </div>
+                            <div>
+                                <a href="#"><img src="newsstand/한국경제.png" /></a>
+                                <a href="#"><img src="newsstand/한국중앙매일.png" /></a>
+                                <a href="#"><img src="newsstand/jtvc.png" /></a>
+                                <a href="#"><img src="newsstand/kbs.png" /></a>
+                                <a href="#"><img src="newsstand/ohmynews.png" /></a>
+                                <a href="#"><img src="newsstand/ytn.png" /></a>
+                            </div>
+                            <i class="col"></i>
+                            <i class="col"></i>
+                            <i class="col"></i>
+                            <i class="row"></i>
+                            <i class="row"></i>
+                            <i class="row"></i>
+                            <i class="row"></i>
+                            <i class="row"></i>
+                        </div>
+                        <div id="main-left-next-menu">
+                            <button id="main-left-news-pre"></button>
+                            <button id="main-left-news-next"></button>
+                        </div>
+                    </section>
+                    <section id="main-left-shopping"></section>
+                    <section id="main-left-content"></section>
+                </div>
+                <div id="main-right">
+                    <section id="main-right-login">
+                        <p>네이버를 더 안전하고 편리하게 이용하세요</p>
+                        <a href="#" id="main-right-login-button">
+                            <i id="main-right-login-NAVER-image"></i>
+                            <span id="main-right-login-text">로그인</span>
+                        </a>
+                        <div id="main-right-login-option">
+                            <a href="#" id="main-right-login-find-id">아이디 찾기</a>
+                            <a href="#" id="main-right-login-find-password">비밀번호 찾기</a>
+                            <a href="#" id="main-right-login-createaccount">회원가입</a>
+                        </div>
+                    </section>
+                    <aside id="main-right-ad"></aside>
+                    <section id="main-right-weather"></section>
+                    <aside id="main-right-ad2"></aside>
+                    <aside id="main-right-ad3"></aside>
+                    <section id="main-right-weather-main"></section>
+                    <section id="main-right-stock"></section>
+                    <aside id="main-right-ad4"></aside>
+                    <section id="main-right-widget"></section>
+                    <aside id="main-right-ad5"></aside>
+                </div>
+            </main>     
         </div>
     </div>
 </body>
